--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 </head>
 <body>
     <h1>Camera Access with PoseNet</h1>
-    <video id="video" style="display: none;" width="640" height="480" autoplay></video>
-    <canvas id="output" width="640" height="480"></canvas>
+    <video id="video" autoplay playsinline style="display:none;"></video>
+    <canvas id="output"></canvas>
     <script src="script.js"></script>
 </body>
 </html>
