--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Camera Access with PoseNet</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="style.css">
     <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs"></script>
     <script src="https://cdn.jsdelivr.net/npm/@tensorflow-models/posenet"></script>
 </head>
@@ -12,6 +12,7 @@
     <h1>Camera Access with PoseNet</h1>
     <video id="video" autoplay playsinline style="display:none;"></video>
     <canvas id="output"></canvas>
+    <div id="count" class="count-text">Count: 0</div>
     <script src="script.js"></script>
 </body>
 </html>
