--- a/index.html
+++ b/index.html
@@ -10,6 +10,13 @@
 </head>
 <body>
     <h1>Camera Access with PoseNet</h1>
+    <label for="exercise">Select Exercise:</label>
+    <select id="exercise">
+        <option value="squat">Squat</option>
+        <option value="lunge">Lunge</option>
+        <option value="shoulderPress">Shoulder Press</option>
+        <option value="dumbbellCurl">Dumbbell Curl</option>
+    </select>
     <video id="video" autoplay playsinline style="display:none;"></video>
     <canvas id="output"></canvas>
     <div id="count" class="count-text">Count: 0</div>
