--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Camera Access with PoseNet</title>
+    <title>Everyone's Fitness</title>
     <link rel="stylesheet" href="style.css">
     <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs"></script>
     <script src="https://cdn.jsdelivr.net/npm/@tensorflow-models/posenet"></script>
 </head>
 <body>
-    <h1>Camera Access with PoseNet</h1>
+    <h1 id="title">Everyone's Fitness</h1>
     <label for="exercise">Select Exercise:</label>
     <select id="exercise">
         <option value="squat">Squat</option>
