--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <video id="video" autoplay playsinline style="display:none;"></video>
     <canvas id="output"></canvas>
     <div id="count" class="count-text">Count: 0</div>
+    <div id="feedbackPopup" class="feedback-popup"><span id="feedbackMessage"></span></div>
     <script src="script.js"></script>
 </body>
 </html>
